<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/background_edittext"
            android:hint="@string/email_hint"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/emailInput">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/emailInput"
            android:gravity="center_vertical"
            android:background="@drawable/background_edittext"
            android:hint="@string/password_hint"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/passwordInput">
        </EditText>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/passwordInput"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/background_edittext"
            android:hint="@string/name_input"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/nameInput">
        </EditText>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/passwordInput"
            android:layout_toEndOf="@id/nameInput"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/background_edittext"
            android:hint="@string/age_input"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:inputType="number"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:maxLength="3"
            android:id="@+id/ageInput">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageInput"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/success_register"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/kotra_bold"
            android:ellipsize="end"
            android:id="@+id/register">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/maple_light"
            android:ellipsize="end"
            android:id="@+id/back">
        </TextView>
    </RelativeLayout>
</layout>