<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="로고란"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/kotra_bold"
            android:background="@drawable/background_edittext"
            android:id="@+id/logoView">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoView"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorAlpha_85percent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/emailInput">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailInput"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorAlpha_85percent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_regular"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/passwordInput">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/passwordInput"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/loginButton"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/kotra_bold"
            android:id="@+id/login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:text="@string/registerButton"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/maple_light"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/searchButton"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/maple_light"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:id="@+id/search"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/register"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:text="광고란"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/kotra_bold"/>
    </RelativeLayout>
</layout>